grammar.ebnf

number = digits , [ "." , digits ] ;

identifier = ( symbol | alpha ) , [ digits ] ;
variable = identifier ;

arguments = expression , { "," , expression } ;
sfunction = sfunc , primary ;
lfunction = lfunc , "(" , arguments , ")" ;
dfunction = identifier , "(" , arguments , ")" ;
function = dfunction | lfunction | sfunction ;

expression = term , { ("+" | "-") , term } ;
term = factor , { ("*" | "/") , factor } ;
factor = [ "-" ] , super ;
super = multiple , { multiple } ;
multiple = primary , [ "^" , power ] ;
power = [ "-" ] , multiple ;
primary = number | function | variable | "(" , expression, ")" | "|" , expression , "|" ;

definable = variable | identifier , "(" , arguments , ")" ;
statement = [ definable , "=" ] , expression , $ ;
